Fix overflow issue

--- a/src/components/ArticleLine/ArticleLine.sass
+++ b/src/components/ArticleLine/ArticleLine.sass
@@ -16,6 +16,7 @@
   flex-direction: column
   width: 100%
   padding: 2.023rem 1.82rem 0 1.82rem
+  overflow: hidden
 
 +for-tablet-portrait-up
   .line__entries
